# SktTrain

./: CMakeLists.txt
Qt5app/: CMakeLists.txt  QSktTrainer.cpp
libskt/: CMakeLists.txt  abstractaudioclient.cpp  abstractaudioclient.h  jackaudioclient.cpp  jackaudioclient.h  phrase.cpp  phrase.h
